# vglite_vulkan_2026

./: .gitignore  AGENTS.md  CMakeLists.txt  FIXES.md  README.md  build.sh  vg_lite_clear_and_blit_api.md
doc/: design-clear-blit.md
docs/: blit_discard_analysis.md  gen_discard_diagram.py  spv-regeneration.md  vg_lite_draw.md
excalidraw/: vg_lite_blit.msaa1x.flowchart.md  vg_lite_blit.msaa4x.flowchart.md  vg_lite_clear.flowchart.md  vg_lite_draw.flowchart.md  vg_lite_draw_pattern.flowchart.md
inc/: vg_lite.h  vg_lite_config.h  vg_lite_util.h
shaders/: blit.frag  blit.vert  blit_aabb.vert  blit_native.frag  blit_native_fs.frag  blit_obb.vert  draw.frag  draw.vert  gradient.frag  gradient.vert  pattern.frag  pattern.vert
src/: CMakeLists.txt  draw_frag_spv.h  draw_vert_spv.h  g_frag_spv_data.h  g_vert_spv_data.h  shader_loader.c  shader_loader.h  spv_frag.h  spv_gradient_frag.h  spv_gradient_vert.h  spv_native_frag.h  spv_pattern_frag.h  spv_pattern_vert.h  spv_vert.h  tessellator.c  tessellator.h  vg_lite.c  vg_lite_draw.c  vg_lite_format.c  vg_lite_format.h  vg_lite_gradient.c  vg_lite_math.h  vg_lite_path.c  vg_lite_shader.c  vg_lite_shader.h  vg_lite_stroke.c  vg_lite_vulkan.c  vg_lite_vulkan.h  vlc_parser.c  vlc_parser.h
src/shaders/: draw_vert_spv.h
tests/: CMakeLists.txt
tests/Clear/: Clear.c
tests/Gradient/: gradient.c
tests/align16/: align16.c
tests/blend_premultiply/: blend_premultiply.c
tests/blit_accum/: blit_accum.c
tests/blit_chain/: blit_chain.c
tests/blit_draw/: blit_draw.c
tests/blit_mixed/: blit_mixed.c
tests/blit_multi/: blit_multi.c
tests/blit_perf/: blit_perf.c
tests/blit_switch/: blit_switch.c
tests/clear/: clear.c
tests/clear_dl/: clear_dl.c
tests/clock/: golden.h  main.c
tests/draw_image/: draw_image.c
tests/gfx1/: gfx1.c
tests/gfx2/: gfx2.c
tests/gfx21/: gfx21.c
tests/gfx3/: gfx3.c
tests/imgA8/: imgA8.c
tests/imgIndex/: imgIndex.c
tests/linearGrad/: linearGrad.c
tests/multi_draw/: multi_draw.c
tests/patternFill/: CMakeLists.txt  patternFill.c
tests/radialGrad/: radialGrad.c
tests/recolor/: recolor.c
tests/rotate/: rotate.c
tests/scale/: scale.c
tests/scissor/: scissor.c
tests/sft_blit/: sft_blit.c
tests/sft_clear/: sft_clear.c
tests/stroke/: stroke.c
tests/test_bgr565_clear/: test_bgr565_clear.c
tests/tiger/: tiger.c
tests/tiled/: tiled.c
tests/ui/: golden.h  main.c
tests/vector/: golden.h  vector.c
util/: CMakeLists.txt  Common.h  SFT.h  util.c  util.h  vg_lite_util.c
